--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "start": "npx tsx --watch src/index.ts",
+    "dev": "ts-node src/index.ts",
+    "start": "npx nodemon src/index.ts",
     "build": "tsc",
     "test": "jest"
   },
   "dependencies": {
-    "@types/express-session": "^1.17.10",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "esbuild-runner": "^2.2.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "redis": "^5.0.0-next.4",
     "session": "^0.1.0",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
     "yup": "^1.3.2"
   },
@@ -33,8 +35,11 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
-    "@types/nodemon": "^1.19.6"
+    "@types/nodemon": "^1.19.6",
+    "ts-node": "^10.9.2",
+    "ts-node-esm": "^0.0.6"
   },
   "repository": "git+https://github.com/MJaseer/Khoob_Server.git",
   "author": "Muhammed Jaseer <mjaseer43@gmail.com>",
